<resources>
    <string name="app_name">GANDER APP</string>
    <string name="title_activity_registro1_">Lista General</string>
    <string name="tab_l_bovinos">Bovinos</string>
    <string name="tab_l_equinos">Equinos</string>
    <string name="tab_l_porcinos">Porcinos</string>
    <string name="tab_lista_potreretos">Potreros</string>
    <string name="tab_lista_insumos_vacas">Insumos de Vacas</string>
    <string name="tab_lista_movimientos_potreros">Animales En potrero</string>
    <string name="tab_r_venta_vacas"> Venta De Daca</string>
    <string name="tab_lista_nueva">lista fragment</string>
    <string name="tab_registro_">Otro</string>
    <string name="tab_registro_general">Datos Generales</string>
    <string name="action_registrarse">Empleado</string>
    <string name="action_r_finca">Finca</string>
    <string name="action_tipo_prod">Tipos De Produccion</string>
    <string name="action_salir">Cerrar Sesion</string>
    <string name="action_volver_inicio">Volver Al Inicio</string>
    <string name="action_r_emfermedad_v">Registrar Enfermedad</string>
    <string name="action_menu_administrador">Menu Admininistracion</string>
    <string name="action_ir_lista">lista Animales</string>
    <string name="action_r_palpacion_v">Palpacion</string>
    <string name="action_r_prod_v">Registrar Secado</string>
    <string name="action_r_repro_v">Registrar Insumo del Animal</string>
    <string name="title_activity_manejo__potreros">Manejo de Potreros</string>
    <string name="secado_animal_notification_title_template">Se necesia secar algunas animales</string>
    <string name="parto_aniamal_notification_title_template">Se necesia cuidar algunas animales para el parto </string>
    <string name="secado_animal_notification_placeholder_text_template">SEÑOR GANADERO TENGA ENCUENTA QUE:
         Hay Animales Secos En Proceso De secado que probablemente n,
        para que no hayan dificultades en la produccion revisa tu tabla de tareas ganaderas
    </string>
    <string name="parto_animal_notification_placeholder_text_template">SEÑOR GANADERO TENGA ENCUENTA QUE:
         Hay Animales Secos En Proceso De adelanto que probablemente necesitan de su cuidado y verificacion,
        para que no hayan dificultades en el parto revisa tu tabla de tareas ganaderas
    </string>
    <string name="title_activity_ensayos">Ensayos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="vienbenida">VIENBENIDO</string>
    <string name="action_general">Registro de insumos</string>
    <string name="action_general_notificacion">Recuerda Tu secado</string>
    <string name="action_general_notificacion_parto">Recuerda Los Parto</string>
    <string name="action_registrar_emfermedad">Registrar enfermedad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_mane_potre">Registrar Potrero</string>
    <string name="action_r_insumo_pot">Registrar Insumo potreros</string>
    <string name="action_r_vaca">Animal</string>
    <string name="action_tipo_carne">Carne</string>
    <string name="action_tipo_leche">Leche</string>
    <string name="action_r_equino">Registrar equino</string>
    <string name="action_r_ternera">Registrar ternera</string>
    <string name="action_r_insumo_vacas">Insumos Animal</string>
    <string name="action_r_insumo_general">Insumo General</string>
    <string name="action_r_insumo_v">Insumo Del Animal</string>
    <string name="action_r_parto_v">Parto</string>
    <string name="action_r_calor_vaca">Calor</string>
    <string name="action_r_vacunacion_vaca">Vacunacion</string>
    <string name="action_r_secado_vaca">Secado</string>
    <string name="action_lista_porero">lista De potreros</string>
    <string name="action_r_g_adic">Registro Gastos Adicionales</string>
    <string name="action_registrar_cliente">Registrar cliente</string>
    <string name="title_activity_p_admin">Administrador</string>
    <string name="nav_header_p_admin">Nombre</string>
    <string name="nav_header_title_p_admin">JJ</string>
    <string name="nav_header_subtitle_p_admin">Administrador</string>
    <string name="nav_header_desc_p_admin">Navigation admin</string>
    <string name="nav_header_p_animal">Nombre</string>
    <string name="nav_header_title_p_animal">JJCOMPANYAGRO</string>
    <string name="nav_header_subtitlep_animal">Animal</string>
    <string name="nav_header_desc_p_animal"> Headeranimal</string>
    <string name="action_settings_salri">Cerrar sesion</string>
    <string name="title_activity_p_animal">Animal</string>
    <string name="menu_home_p_admin">Inicio</string>
    <string name="menu_gallery_p_admin">Datos de la finca</string>
    <string name="menu_slideshow_p_admin">Estadisticas</string>
    <string name="menu_tools_p_admin">promedio</string>
    <string name="menu_share_p_admin">Personal</string>
    <string name="menu_tareas_p_admin">Palpacion</string>
    <string name="menu_home_perfil_animal">Secado</string>
    <string name="menu_gallery_perfil_animal">Palpacion</string>
    <string name="menu_slideshow_perfil_animal">Vacunacion</string>
    <string name="menu_tools_perfil_animal">Parto</string>
    <string name="menu_share_perfil_animal">Enfermedad</string>
    <string name="menu_send_perfil_animal">Calor</string>
    <string name="action_registrar_novedad">Datos del animal</string>
    <string name="action_ir_lista_animal"> lista De Animales</string>
    <string name="action_movimiento_animal">Registrar Movimiento</string>
    <string name="title_activity_perfil_propietario">Perfil Propietario</string>
    <string name="nav_header_title">JJCOMPANYAGRO</string>
    <string name="nav_header_subtitle">propietario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home_p_prop">Inicio</string>
    <string name="menu_gallery_p_prop">Estadisticas</string>
    <string name="menu_slideshow_p_prop">Promedios</string>
    <string name="menu_tools_p_prop">Estadisticas</string>
    <string name="menu_analizis_p_prop">Analizis Gneral</string>
    <string name="menu_share_p_prop">Personal</string>
    <string name="menu_send_p_prop">Base de datos General</string>
    <string name="action_menu_prop_p_prop">Menu propietario</string>
    <string name="title_activity_lista_potreros">Lista_potreros</string>
    <string name="action_r_movimiento">Agregar Animal</string>
    <string name="action_r_movimiento_lote_pto">Agregar Lote</string>
    <string name="action_menu_P_prop">Menu Propietario</string>
    <string name="action_menu_p_admin">Menu Administrador</string>
    <string name="action_menu_regreso">Regresar</string>
    <string name="title_activity_detalle_cliente">Detalle cliente</string>
    <string name="action_r_admin">Registrar Administrador</string>
    <string name="title_activity_detalle_animal">Detalle Animal</string>
    <string name="action_medida_leche">Medir leche</string>
    <string name="action_registrar_pago_leche">Registrar pago de Leche</string>
    <string name="menu_precios_p_admin">Precios</string>
    <string name="menu_inicio_perfil_animal">Inicio</string>
    <string name="menu_inicio_p_animal_m">Inicio</string>
    <string name="menu_enfermedad_p_animal_m">Enfermedades</string>
    <string name="menu_vacunacion_p_animal_m">Vacunacion</string>
    <string name="menu_tools_p_animal_m">Produccion</string>
    <string name="menu_share_p_animal_m">Reproduccion</string>
    <string name="menu_send_p_animal_m">Otro</string>
    <string name="title_activity_perfil_animal_macho">Perfil Animal Macho</string>
    <string name="nav_header_desc_p_animal_m">Perfil Macho</string>
    <string name="nav_header_title_p_animal_m">Nombre</string>
    <string name="nav_header_subtitle_p_animal_m">JJCOMPANYAGRO</string>
    <string name="tab_r_toro">Toros</string>
    <string name="tab_terneros">Terneros</string>
    <string name="title_activity_detalle_insumos">Detalle Insumos</string>
    <string name="title_activity_control_agricola">Control Agricola</string>
    <string name="menu_produccion_leche_perfil_animal">PRODUCCION LECHERA</string>
    <string name="menu_produccion_pesaje_perfil_animal">PRODUCCION PESAJE </string>
    <string name="title_activity_control_insumos">Control Insumos</string>
    <string name="tab_c_insumos_droga">Medicamento</string>
    <string name="tab_c_insumo_herramienta">Herramientas</string>
    <string name="tab_c_insumo_concentrados">Concentrados</string>
    <string name="action_r_prop">Registrar Propietario</string>
    <string name="action_vacunacion_animal_m">Registrar Vacunacion</string>
    <string name="action_enfermedad_m">Enfermedad</string>
    <string name="action_r_insumo_m">Registrar Insumo</string>
    <string name="action_lista_lote_lev">Animales de produccion</string>
    <string name="action_lote_produccion">Animales de produccion</string>
    <string name="menu_ganado_levante_p_admin">Ganado de levante</string>
    <string name="menu_ganado_produccion_p_admin">Ganado de levante</string>
    <string name="menu_estadisticas_p_admin">Estadisticas</string>
    <string name="menu_analizis_p_admin">Analizis</string>
    <string name="title_activity_manejo_animales_levante">Lista Animales</string>
    <string name="tab_terneras_01">terneras 01</string>
    <string name="tab_terneras_02">terneras 02</string>
    <string name="tab_terneras_03">terneras 03</string>
    <string name="tab_horras">Horras</string>
    <string name="tab_lote_01">Lote 01</string>
    <string name="tab_lote_02">Lote 02</string>
    <string name="tab_lote_03">Lote 03</string>
    <string name="tab_lote_04">Lote 04</string>
    <string name="tab_lote_c1">Terneras 01</string>
    <string name="tab_lote_c2">Terneras 02</string>
    <string name="tab_lote_c3">Terneras 03</string>
    <string name="tab_lote_n1">novillos(a) 01</string>
    <string name="tab_lote_n2">novillos(a) 02</string>
    <string name="tab_lote_n3">novillos(a) 03</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="action_salida_mvto">Salida Del Lote</string>
    <string name="menu_produccion_diaria_p_admin">Produccion Animal</string>
    <string name="action_r_leche">Produccion Diaria</string>
    <string name="action_r_her">Registrar Herramienta</string>
    <string name="action_animales_prod">Animales de Produccion</string>
    <string name="action_r_efmd_vaca">Enfermedad</string>
    <string name="title_activity_detalle_calor">Detalle_calor</string>
    <string name="title_activity_detalle_parto">Detalle_parto</string>
    <string name="action_detalle_aniaml">Editar Datos Del Animal</string>
    <string name="title_activity_detalle_enfermedad">Detalle Enfermedad</string>
    <string name="action_perfil_admin">Menu Administración</string>
    <string name="action_prueba_animal_m">prueba registro</string>
    <string name="hint_search">buscar</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="action_registrar_tarea">Registrar Tarea</string>
    <string name="channel_description_secado">channel Secado</string>
    <string name="action_manual">Manual De Uso</string>
    <string name="ganacia">GANANCIAS</string>
    <string name="menu">menu</string>
    <string name="action_copiar_codigo">Copiar Codigo</string>
    <string name="leche_producida_mes">LECHE PRODUCIDA</string>
    <string name="produccion_alta_medida">LECHE ALTA</string>
    <string name="produccion_baja_medida">LECHE BAJA</string>
    <string name="produccion_alta_pesaje">PESAJE ALTA</string>
    <string name="produccion_baja_pesaje">PESAJE BAJA</string>
    <string name="menu_lista_animales">Lista General Animales</string>
    <string name="menu_lista_genral_animales">Lista General Animales</string>
    <string name="gastos_adicionales">Gastos Adicionales</string>
    <string name="ganacia_adicionales">Ganacias Adicionales</string>
</resources>