<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_atras_perfil_pro"
        android:icon="@drawable/ic_regreso"
        android:orderInCategory="100"
        android:title="menu animal"
        app:showAsAction="always">

    </item>
    <item
        android:icon="@drawable/ic_menu"
        android:orderInCategory="100"
        android:title="@string/action_settings_salri"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_p_prop_ir_ps_admin"
                android:orderInCategory="100"
                android:title="@string/action_menu_p_admin"
                android:icon="@drawable/ic_ir"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_p_prop_r_admin"
                android:orderInCategory="100"
                android:title="@string/action_r_admin"
                android:icon="@drawable/ic_nota"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_p_prop_r_prop"
                android:orderInCategory="100"
                android:title="@string/action_r_admin"
                android:icon="@drawable/ic_nota"
                app:showAsAction="never" />


            <item
                android:id="@+id/action_p_pro_lista_animal"
                android:orderInCategory="100"
                android:icon="@drawable/ic_ir"
                android:title="@string/action_ir_lista_animal"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_p_prop_lista_porero"
                android:orderInCategory="100"
                android:icon="@drawable/ic_ir"
                android:title="@string/action_lista_porero"
                app:showAsAction="never" />


            <item android:id="@+id/action_back_start_p_p"
                android:title="@string/action_volver_inicio"
                android:icon="@drawable/ic_volver"
                android:orderInCategory="100"
                app:showAsAction="never" />


            <item
                android:id="@+id/action_p_prop_cerrar_cesion"
                android:orderInCategory="100"
                android:icon="@drawable/ic_salida"
                android:title="@string/cerrar_sesion"
                app:showAsAction="never" />

        </menu>

    </item>
</menu>
